@@ -1,3 +1,12 @@
+2007-02-12  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>
+
+	* Remote Service Provider: from an idea by halorgium <rbot@spork.in>,
+	initial steps towards a DRb-based remote service provider for rbot.
+	When complete, it will give plugins the ability to listen to
+	'messages' from remote clients connected to the bot, allowing for such
+	things as svn notification without RSS polling, remote control of
+	the bot, or even (why not?) botnets.
+
 2007-02-08  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>
 
 	* Languages: Japanese support with language files, salutations, larts
